builder/tests/18-multiple-incorrect-attributes.rs
use derive_builder::Builder;

#[derive(Builder)]
struct Test {
    #[builder = "first"]
    #[builder = "second"]
    field: u32,
}

fn main() {}
